# MarkMyWords

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: com.github.voldyman.markmywords.appdata.xml  mark-my-words.desktop
data/assets/: default-view.css  default.css
debian/: changelog  control  copyright  files  mark-my-words.substvars  rules
debian/mark-my-words/DEBIAN/: control  md5sums
debian/mark-my-words/usr/share/applications/: mark-my-words.desktop
po/: markmywords.pot
po/fr/LC_MESSAGES/: markmywords.mo  markmywords.po
po/nl/LC_MESSAGES/: markmywords.mo  markmywords.po
resources/: headerbar.ui  mark-my-words.gresource.xml  toolbar.ui
schemas/: CMakeLists.txt  gschemas.compiled  org.markmywords.gschema.xml
src/: API.vala  Application.vala  Document.vala  DocumentView.vala  FileHandler.vala  Main.vala  Meta.vala  Window.vala  api.cc  api.h  api_gtk.cc  config.h.cmake  config.vala  main.cc
src/Objects/: Keybindings.vala  Preferences.vala  SavedState.vala  Settings.vala
src/Services/: FileHandler.vala
src/Widgets/: .#AboutDialog.vala  AboutDialog.vala  DocumentView.vala  IToolbar.vala  Menubar.vala  PreferencesDialog.vala  Toolbar.vala  UnsavedChangesDialog.vala  Window.vala
ui/: API.vala  Application.vala  Document.vala  Toolbar.vala  Window.vala
vapi/: discount.vapi
